--- a/example.env
+++ b/example.env
@@ -2,3 +2,8 @@
 PORT=
 DATABASE_URI=
 NODE_ENV=development
+JWT_ACCESS_SECRET=
+JWT_REFRESH_SECRET=
+JWT_ACCESS_EXPIRES_IN=
+JWT_REFRESH_EXPIRES_IN=
+SOLT_ROUND=
