--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "http-status": "^1.7.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.5",
+    "mongoose-dynamic-querybuilder": "^1.0.8",
     "morgan": "^1.10.0",
     "zod": "^3.23.8"
   }
