--- a/example.env
+++ b/example.env
@@ -1,9 +1,9 @@
 # app configuration
 PORT=
-DATABASE_URI=
-NODE_ENV=development
-JWT_ACCESS_SECRET=
-JWT_REFRESH_SECRET=
-JWT_ACCESS_EXPIRES_IN=
-JWT_REFRESH_EXPIRES_IN=
-SOLT_ROUND=
+DATABASE_URL=
+NODE_ENV=
+JWT_ACCESS_TOKEN_SECRET=
+JWT_ACCESS_TOKEN_EXPIRES_IN=
+JWT_REFRESH_TOKEN_SECRET=
+JWT_REFRESH_TOKEN_EXPIRES_IN=
+BCRYPT_SALT_ROUND=
