feat: update the readme file and server.ts file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,12 @@
     "source.organizeImports": "always"
   },
   "files.autoSave": "off",
-  "cSpell.words": ["datetime", "Noyon", "Rahman", "signin"]
+  "cSpell.words": [
+    "datetime",
+    "Noyon",
+    "Rahman",
+    "signin",
+    "signup",
+    "unopinionated"
+  ]
 }
