Payment Gateway implemented
  - [x] `/api/v1/payments/pay` POST - user - for pay the car reservation
    total cost
  - [x] `/api/v1/payments/confirmation` POST - for check the payment is
    succesfull
  - [x] `/api/v1/payments/failed` POST - if the payment was failed
  - [x] `/api/v1/payments/cancelled` GET - if the payment was cancel

  Aamarpay Payment gateway implemented for pay the rental cost.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,12 +8,15 @@
   },
   "files.autoSave": "off",
   "cSpell.words": [
+    "aamarpay",
     "amarpay",
     "datetime",
+    "jsonpost",
     "Noyon",
     "Rahman",
     "signin",
     "signup",
+    "trxcheck",
     "unopinionated"
   ]
 }
