--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.5",
     "morgan": "^1.10.0",
+    "uid": "^2.0.2",
     "zod": "^3.23.8"
   }
 }
