update the readme

--- a/example.env
+++ b/example.env
@@ -1,9 +1,17 @@
 # app configuration
-PORT=
-DATABASE_URL=
-NODE_ENV=
-JWT_ACCESS_TOKEN_SECRET=
-JWT_ACCESS_TOKEN_EXPIRES_IN=
-JWT_REFRESH_TOKEN_SECRET=
-JWT_REFRESH_TOKEN_EXPIRES_IN=
-BCRYPT_SALT_ROUND=
+PORT=your_port
+DATABASE_URL=your_database_url
+NODE_ENV=node_environment
+JWT_ACCESS_TOKEN_SECRET=jwt_access_token_secret
+JWT_ACCESS_TOKEN_EXPIRES_IN=jwt_access_token_secret_expires_time
+JWT_REFRESH_TOKEN_SECRET=jwt_refresh_token_secret
+JWT_REFRESH_TOKEN_EXPIRES_IN=jwt_refresh_token_expires_time
+BCRYPT_SALT_ROUND=bcrypt_salt_round
+
+
+API_BASE_URL=your_api_base_url
+CLIENT_BASE_URL=your_client_base_url
+
+AAMARPAY_GATEWAY_BASE_URL=aamarpay_gateway_base_url
+AAMARPAY_STORE_ID=_aamarpay_store_id
+AAMARPAY_SIGNATURE_KEY=aamarpay_signature_key
